Added gateway as separate project.
